argocd/keycloak/manifests/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-internal
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: "vault"
    cert-manager.io/private-key-algorithm: "RSA"
    cert-manager.io/private-key-size: "4096"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: sso.unicornafk.fr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - sso.unicornafk.fr
      secretName: sso.unicornafk.fr-internal-tls
  ingressClassName: "traefik-internal"
